--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
             <div class="container flex mx-auto  justify-between text-center items-center">
 
                 <div class="inline-flex">
-                    <img height="60px" width="60px" src="../asserts/images-removebg-preview (1).png" alt="">
+                    <img height="60px" width="60px" src="../src/asserts/calculator.jpeg (1).png" alt="">
                 </div>
                 <ul class="links flex md:flex-row flex-col md:w-2/4  w-full justify-between text-text text-lg ">
                     <li class="hover:bg-liv hover:transition-opacity"><a href="#home">Home</a></li>
