--- a/src/index.html
+++ b/src/index.html
@@ -177,13 +177,13 @@
 
                 <div
                     class=" text-center justify-center bg-black m-4 text-bag border border-4 rounded-xl border-bag  hover:shadow-2xl sm:mx-7">
-                    <img a class=" h-80 w-full object-cover" src="../asserts/Ieee.jpg" alt="">
+                    <img a class=" h-80 w-full object-cover" src="../src/asserts/figma.jpeg" alt="">
                     <h1 class="text-2xl ">IEEE-EXTREME</h1>
                 </div>
 
                 <div
                     class=" text-center justify-center bg-black m-4 text-bag border border-4 rounded-xl border-bag hover:shadow-2xl sm:mx-7">
-                    <img a class="h-80  w-full object-cover" src="../asserts/infosys.png" alt="">
+                    <img a class="h-80  w-full object-cover" src="../src/asserts/infosys.png" alt="">
                     <h1 class="text-2xl ">Infosys Ideathon</h1>
                 </div>
 
@@ -207,7 +207,7 @@
 <div class="container grid md:grid-cols-3 grid-cols-1 mx-auto text-text  ">
                    <div class=" bg-bag m-5 hover:shadow-2xl hover:translate-x-1 border rounded-xl">
                 <div>
-                    <img class="h-80 w-full object-cover" src="../asserts/calculator.jpeg"
+                    <img class="h-80 w-full object-cover" src="../src/asserts/calculator.jpeg"
                         width="content-center" alt="">
                 </div>
                 <div>
@@ -264,7 +264,7 @@
 
             <div class=" bg-bag m-5 hover:shadow-2xl hover:translate-x-1 border rounded-xl">
                 <div>
-                    <img class="h-80 w-full object-cover" src="../asserts/Landing.jpeg"
+                    <img class="h-80 w-full object-cover" src="../src/asserts/number gussinggame.jpeg"
                         width="content-center" alt="">
                 </div>
                 <div>
@@ -317,7 +317,7 @@
 
             <div class=" bg-bag m-5 hover:shadow-2xl hover:translate-x-1 border rounded-xl">
                 <div>
-                    <img class="h-80 w-full object-cover" src="../asserts/number gussinggame.jpeg"
+                    <img class="h-80 w-full object-cover" src="../src/asserts/number gussinggame.jpeg"
                         width="content-center" alt="">
                 </div>
                 <div>
